CI: simplify versioning mechanism

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,19 +6,16 @@ nuget:
   project_feed: true
 artifacts:
   - path: src\SqLiteFileSystem\bin\**\*.nupkg
-install:
-  - choco install gitversion.portable -pre -y
 assembly_info:
   patch: false
 before_build:
   - dotnet restore
-  - ps: gitversion /l console /output buildserver /updateAssemblyInfo
+  - ps:  $env:BUILD_VERSION = "build-" + [Int]::Parse($env:APPVEYOR_BUILD_NUMBER).ToString("000")
 build_script:
-  - dotnet build /p:PackageVersion="%GitVersion_NuGetVersionV2%" --configuration "%CONFIGURATION%"
+  - dotnet build --version-suffix "%BUILD_VERSION%" --configuration "%CONFIGURATION%"
 after_build:
-  - cmd: ECHO dotnet /p:PackageVersion="%GitVersion_NuGetVersionV2%" --configuration "%CONFIGURATION%"
-  - cmd: dotnet pack /p:PackageVersion="%GitVersion_NuGetVersionV2%" --configuration "%CONFIGURATION%" --no-build
-  #- cmd: appveyor PushArtifact "src\SqLiteFileSystem\bin\**\*.nupkg"
+  - cmd: ECHO dotnet pack --version-suffix "%BUILD_VERSION%" --configuration "%CONFIGURATION%"
+  - cmd: dotnet pack --version-suffix "%BUILD_VERSION%" --configuration "%CONFIGURATION%" --no-build
 test_script:
   # Appveyor logger crashes if used... so not logging test results to appveyor for now
   # Tests failing on release builds - test only on debug for now
