--- a/src/SqLiteFileSystem/SqliteFileSystem.csproj
+++ b/src/SqLiteFileSystem/SqliteFileSystem.csproj
@@ -15,10 +15,7 @@
     <RepositoryUrl>https://github.com/atruskie/SqliteFileSystem</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Zio filesystem sqlite virtualfilesystem flatfilesystem</PackageTags>
-    <!--These are set by GitVersion in the build script -->
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <VersionPrefix>1.0.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0" />
